[tool.poetry]
name = "web-hw2"
version = "0.1.0"
description = ""
authors = ["demagoit <33demagoit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
prompt-toolkit = "3.0.43"
rich = "13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
